# resolve

./: resolve.cabal  stack.yaml
src/Resolve/: Exceptions.hs  Log.hs  Retry.hs  Timeout.hs  Types.hs
src/Resolve/DNS/: Channel.hs  Client.hs  Coding.hs  Decode.hs  Encode.hs  Exceptions.hs  Helper.hs  LiveTCP.hs  Lookup.hs  TCP.hs  Transport.hs  Truncation.hs  Types.hs  UDP.hs  Utils.hs
src/Resolve/DNS/EDNS/: Decode.hs  Encode.hs  Exceptions.hs  Types.hs
src/Resolve/DNS/Helper/: DNS.hs  LiveTCP.hs  TCP.hs  UDP.hs
src/Resolve/DNS/Server/: Exceptions.hs  TCP.hs  Types.hs  UDP.hs
src/Resolve/DNS/Transport/: Dumb.hs  Exceptions.hs  LiveTCP.hs  Multiplex.hs  TCP.hs  Types.hs  UDP.hs
src/Resolve/DNS/Transport/Helper/: DNS.hs  LiveTCP.hs  TCP.hs  UDP.hs
