name:                resolve
version:             0.1.0.0
synopsis:            A name resolusion library
description:         Please see README.org
homepage:            https://github.com/riaqn/resolve#readme
license:             BSD3
license-file:        LICENSE
author:              Zesen Qian
maintainer:          haskell@riaqn.org
copyright:           GPL3
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Resolve.Types
                     , Resolve.Timeout
                     , Resolve.Retry
                     , Resolve.Log
                     , Resolve.DNS.Transport.Types
                     , Resolve.DNS.Transport.Exceptions
                     , Resolve.DNS.Transport.UDP
                     , Resolve.DNS.Transport.TCP
                     , Resolve.DNS.Transport.LiveTCP
                     , Resolve.DNS.Transport
                     , Resolve.DNS.Lookup
                     , Resolve.DNS.Coding
                     , Resolve.DNS.Decode
                     , Resolve.DNS.Encode
                     , Resolve.DNS.Types
                     , Resolve.DNS.Transport.Helper.TCP
                     , Resolve.DNS.Transport.Helper.UDP
                     , Resolve.DNS.Transport.Helper.LiveTCP
                     , Resolve.DNS.EDNS.Types
                     , Resolve.DNS.EDNS.Decode
                     , Resolve.DNS.EDNS.Encode
                     , Resolve.DNS.Utils
                     , Resolve.DNS.EDNS.Exceptions
                     , Resolve.DNS.Exceptions
                     , Resolve.Exceptions

  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , attoparsec
                     , attoparsec-binary
                     , transformers
                     , bv
                     , hashable
                     , network
                     , stm
                     , stm-containers
                     , hslogger
  default-language:    Haskell2010
  default-extensions:  BinaryLiterals
                     , MultiParamTypeClasses
                     , FunctionalDependencies
                     , FlexibleInstances
                     , GADTs
  ghc-options:         -Wall -Werror -Wno-missing-signatures -Wno-name-shadowing -Wno-type-defaults
                     
source-repository head
  type:     git
  location: https://github.com/riaqn/resolve
